--- a/backend-stripe/package.json
+++ b/backend-stripe/package.json
@@ -10,6 +10,8 @@
   "license": "ISC",
   "dependencies": {
     "cors": "^2.8.5",
-    "express": "^4.18.2"
+    "express": "^4.18.2",
+    "stripe": "^11.14.0",
+    "uuid": "^9.0.0"
   }
 }
